--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,6 +5,6 @@
     <title>Home</title>
 </head>
 <body>
-    <p>Esse é meu 1º site. Lira, já me inscrevi no canal</p>
+    <h1>Aplicação Python para a Disciplina de Computação Orientada a Serviços</h1>
 </body>
 </html>
